# hl

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  debug.sh  rules.md  sample.yml  test-file.md
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/lexers/: actionscript.rs  ada.rs  bash.rs  c.rs  clojure.rs  coffescript.rs  cpp.rs  cs.rs  css.rs  cuda.rs  dart.rs  edn.rs  erlang.rs  go.rs  groovy.rs  haskell.rs  html.rs  java.rs  javascript.rs  json.rs  kotlin.rs  lua.rs  makefile.rs  markdown.rs  mod.rs  nim.rs  php.rs  proto.rs  python.rs  raw.rs  ruby.rs  rust.rs  toml.rs  typescript.rs  v.rs  vue.rs  yaml.rs  zig.rs
crates/core/src/lexers/actionscript/: mod.rs  render.rs  token.rs
crates/core/src/lexers/bash/: mod.rs  render.rs  token.rs
crates/core/src/lexers/c/: mod.rs  render.rs  token.rs
crates/core/src/lexers/clojure/: mod.rs  render.rs  token.rs
crates/core/src/lexers/cpp/: mod.rs  render.rs  token.rs
crates/core/src/lexers/cs/: mod.rs  render.rs  token.rs
crates/core/src/lexers/css/: mod.rs  render.rs  token.rs
crates/core/src/lexers/cuda/: mod.rs  render.rs  token.rs
crates/core/src/lexers/dart/: mod.rs  render.rs  token.rs
crates/core/src/lexers/edn/: mod.rs  render.rs
crates/core/src/lexers/erlang/: mod.rs  render.rs  token.rs
crates/core/src/lexers/go/: mod.rs  render.rs  token.rs
crates/core/src/lexers/groovy/: mod.rs  render.rs  token.rs
crates/core/src/lexers/haskell/: mod.rs  render.rs  token.rs
crates/core/src/lexers/html/: mod.rs  render.rs  token.rs
crates/core/src/lexers/java/: mod.rs  render.rs  token.rs
crates/core/src/lexers/javascript/: mod.rs  render.rs  token.rs
crates/core/src/lexers/json/: mod.rs  render.rs  token.rs
crates/core/src/lexers/kotlin/: mod.rs  render.rs  token.rs
crates/core/src/lexers/lua/: mod.rs  render.rs  token.rs
crates/core/src/lexers/makefile/: mod.rs  render.rs  token.rs
crates/core/src/lexers/markdown/: mod.rs  render.rs
crates/core/src/lexers/nim/: mod.rs  render.rs  token.rs
crates/core/src/lexers/php/: mod.rs  render.rs  token.rs
crates/core/src/lexers/python/: mod.rs  render.rs  (+1 more)
crates/generator/: Cargo.toml  README.md
crates/generator/src/: color.rs  lib.rs  main.rs  module.rs  parser.rs  render.rs  token.rs
crates/generator/src/stub/: base_lexer_mod.stub  base_lib_mod.stub  handle_bracket_dash_comment.stub  handle_identifier_suffix.stub  handle_read_string.stub  handle_single_line_comment.stub  initial_impl_lexer.stub  initial_module.stub  mark_as_ident_on_char.stub  mark_as_string_on_prefix.stub  module_read_number.stub  render_token_constant.stub
crates/tests/: Cargo.toml
crates/tests/src/test/: mod.rs
(+337 files in other folders)
