[package]
name = "hl"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Rosid <alahmadrosid@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.7" }
yaml-rust = "0.4"

[[bin]]
name = "hl"
path = "src/main.rs"
