[package]
name = "hl"
version = "0.1.1"
edition = "2021"
authors = ["Ahmad Rosid <alahmadrosid@gmail.com>"]

[dependencies]
clap = { version = "3.0.0-rc.7" }
yaml-rust = "0.4"

[workspace]
members = [
  "crates/generator",
  "crates/core",
  "crates/tests",
]

[lib]
name = "hl"
path = "crates/core/src/lib.rs"